[gd_scene load_steps=23 format=3 uid="uid://clglvhrm6yfa4"]

[ext_resource type="Script" path="res://Scripts/Player2.tres.gd" id="1_18vbv"]
[ext_resource type="Texture2D" uid="uid://c8jh80qq5rqei" path="res://Assets/Sprites/Ninja Adventure - Asset Pack/Ninja Adventure - Asset Pack/Actor/Characters/Cavegirl/SpriteSheet.png" id="1_37p16"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cxbif"]
atlas = ExtResource("1_37p16")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7q7a"]
atlas = ExtResource("1_37p16")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm1wp"]
atlas = ExtResource("1_37p16")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_77e3b"]
atlas = ExtResource("1_37p16")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff6df"]
atlas = ExtResource("1_37p16")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys23n"]
atlas = ExtResource("1_37p16")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_306ep"]
atlas = ExtResource("1_37p16")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6a2a"]
atlas = ExtResource("1_37p16")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8v2j"]
atlas = ExtResource("1_37p16")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdqis"]
atlas = ExtResource("1_37p16")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jedor"]
atlas = ExtResource("1_37p16")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdpdv"]
atlas = ExtResource("1_37p16")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6x43"]
atlas = ExtResource("1_37p16")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pvdw"]
atlas = ExtResource("1_37p16")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqp3k"]
atlas = ExtResource("1_37p16")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i0lr"]
atlas = ExtResource("1_37p16")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfb81"]
atlas = ExtResource("1_37p16")
region = Rect2(16, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_682xa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxbif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7q7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm1wp")
}],
"loop": true,
"name": &"down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_77e3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ff6df")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys23n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_306ep")
}],
"loop": true,
"name": &"left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6a2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8v2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdqis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jedor")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdpdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6x43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pvdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqp3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i0lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfb81")
}],
"loop": true,
"name": &"up",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kjoax"]
radius = 7.07107

[sub_resource type="CircleShape2D" id="CircleShape2D_8fe3n"]
radius = 15.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_18vbv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_682xa")
animation = &"up"
autoplay = "up"
frame = 1
frame_progress = 0.415952

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kjoax")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="UI" type="Node2D" parent="Camera2D"]

[node name="EmotionLabel" type="Label" parent="Camera2D/UI"]
offset_left = -191.0
offset_top = -108.0
offset_right = -151.0
offset_bottom = -85.0

[node name="Interaction Components" type="Node2D" parent="."]
z_index = 1

[node name="InteractionArea" type="Area2D" parent="Interaction Components"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction Components/InteractionArea"]
shape = SubResource("CircleShape2D_8fe3n")

[node name="InteractLabel" type="Label" parent="Interaction Components"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -35.0
offset_right = 61.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.409988, 0.409988)
theme_override_colors/font_color = Color(1, 0, 0.0117647, 1)
text = "test"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Interaction Components/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="Interaction Components/InteractionArea" to="." method="_on_interaction_area_area_exited"]
